# Embedded-ESKF

./: .gitignore  .gitmodules  CMakeLists.txt  ConsistentOrientationFilter.hpp  Doxyfile  ErrorStateKalmanFilter.hpp  KalmanFilterBase.hpp  README.md
data/: imu.txt
demo/: config.h.in  demo.cpp
doc/html/: ErrorStateKalmanFilter_8hpp_source.html  classFilter_1_1ConsistentOrientation_1_1ConsistentOrientationFilter-members.html  classFilter_1_1ConsistentOrientation_1_1ConsistentOrientationFilter__inherit__graph.map  classFilter_1_1ErrorStateKalmanFilter.html  classFilter_1_1KalmanFilterBase-members.html  classFilter_1_1KalmanFilterBase.html  classes.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  inherit_graph_0.md5  inherit_graph_1.md5  md_README.html
doc/html/search/: all_4.js  all_5.js  all_9.js  all_a.js  all_c.js  classes_2.js  functions_0.js  (+9 more)
docs/: index.html
docs/html/: ConsistentOrientationFilter_8hpp_source.html  KalmanFilterBase_8hpp_source.html  annotated.html  classFilter_1_1ConsistentOrientation_1_1ConsistentOrientationFilter.html  classFilter_1_1ConsistentOrientation_1_1ConsistentOrientationFilter__coll__graph.md5  classFilter_1_1ErrorStateKalmanFilter-members.html  classFilter_1_1ErrorStateKalmanFilter__coll__graph.map  classFilter_1_1ErrorStateKalmanFilter__inherit__graph.md5  classFilter_1_1KalmanFilterBase__inherit__graph.map  classFilter_1_1KalmanFilterBase__inherit__graph.md5  files.html  functions.html  graph_legend.html  index.html  inherit_graph_0.map  inherit_graph_1.map  inherits.html  pages.html
(+19 files in other folders)
